Finish share idea and donation cards UI

--- a/Sparc2/Sparc2/Donations/AddDonation.razor.scss
+++ b/Sparc2/Sparc2/Donations/AddDonation.razor.scss
@@ -1,7 +1,7 @@
 ﻿div {
     display: flex;
     flex-direction: column;
-    gap: 4px;
+    gap: 8px;
 
     h2 {
         color: var(--gray-900);
@@ -9,6 +9,10 @@
         font-weight: 600;
         line-height: 110%;
         letter-spacing: -0.427px;
+
+        &:last-of-type {
+            margin-bottom: 24px;
+        }
     }
 }
 
@@ -17,18 +21,12 @@ p {
     font-size: 1.4rem;
     font-weight: 450;
     line-height: 120%;
+    margin-bottom: 24px;
 }
 
 .field-group:first-of-type {
     margin-bottom: 24px;
-}
-
-label {
-    font-size: 1.2rem;
-    font-weight: 600;
-    line-height: 120%;
-    letter-spacing: -0.12px;
-    margin-bottom: 8px;
+    margin-top: 30px;
 }
 
 .btn-group {
@@ -38,18 +36,32 @@ label {
 
     button {
         flex: 1;
-        width: 100%;
+        justify-content: center;
+        display: flex;
+        gap: 4px;
+        align-items: center;
+    }
+
+    ::deep svg path {
+        stroke: var(--gray-600);
     }
 }
 
+label {
+    font-size: 1.2rem;
+    font-weight: 600;
+    letter-spacing: -0.12px;
+}
+
 button {
+    height: 40px;
     padding: 8px 16px 8px 14px;
     border-radius: 20px;
     border: 1px solid var(--gray-100);
     background: var(--yellow-50);
     cursor: pointer;
     color: var(--gray-600);
-    font-weight: 500;
+    font-weight: 600;
     font-size: 16px;
 
     &:hover {
@@ -60,6 +72,10 @@ button {
         box-shadow: 0px 0px 8px 0px rgba(178, 116, 250, 0.25);
         border-color: var(--purple-900);
         color: var(--purple-900);
+
+        ::deep svg path {
+            stroke: var(--purple-900);
+        }
     }
 }
 
@@ -73,30 +89,77 @@ button {
         width: 100%;
     }
 
-    input {
+    .currency-input {
+        margin-top: 4px;
+        position: relative;
         grid-column: span 3;
-        border-radius: 16px;
-        border: 1px solid var(--gray-100);
-        background: var(--yellow-50);
-        padding: 8px 16px 8px 14px;
+
+        ::deep svg {
+            position: absolute;
+            top: 50%;
+            left: 12px;
+            transform: translateY(-50%);
+            pointer-events: none;
+            z-index: 1;
+            width: 16px;
+            height: 16px;
+            transition: stroke 0.3s;
+        }
+
+        ::deep input {
+            height: 22px;
+            padding: 8px 12px;
+            -moz-appearance: textfield;
+            border-radius: 16px;
+            border: 1px solid var(--gray-100);
+            background: var(--yellow-50);
+            text-align: right;
+
+            &::-webkit-inner-spin-button,
+            &::-webkit-outer-spin-button {
+                -webkit-appearance: none;
+                margin: 0;
+            }
+
+            :deep(input::placeholder) {
+                color: var(--gray-600);
+                font-weight: 450;
+            }
+        }
+    }
+}
+
+.currency-input:focus-within {
+    ::deep input {
+        outline: none;
+        border: 1px solid var(--purple-900);
+
+        :deep(input::placeholder) {
+            color: var(--purple-900);
+        }
+    }
+
+    ::deep svg path {
+        stroke: var(--purple-900);
+    }
+
+    :deep(input::placeholder) {
+        color: var(--purple-900);
     }
 }
 
 .payment-form {
-    display: flex;
-    flex-direction: column;
-    gap: 16px !important;
+    overflow-y: auto; 
 
     label {
         display: flex;
         flex-direction: column;
         gap: 8px;
-        margin-bottom: 16px;
+        margin-bottom: 12px;
 
         span {
             font-size: 1.2rem;
             font-weight: 600;
-            line-height: 120%;
             letter-spacing: -0.12px;
         }
 
@@ -108,14 +171,9 @@ button {
             border-radius: 16px;
             border: 1px solid var(--gray-100);
             background: var(--yellow-50);
-        }
-
-        ::deep input {
             padding: 8px 16px;
             height: 22px;
         }
-
-
 
         &:last-of-type {
             margin-bottom: 0;
@@ -126,5 +184,11 @@ button {
         display: flex;
         gap: 12px;
         flex-direction: row;
+        width: 100%;
+
+        label {
+            flex: 1;
+            min-width: 0;
+        }
     }
 }
