--- a/Sparc2/Sparc2/Ideas/AddIdea.razor.scss
+++ b/Sparc2/Sparc2/Ideas/AddIdea.razor.scss
@@ -7,7 +7,6 @@ div {
         color: var(--gray-900);
         font-size: 2.133rem;
         font-weight: 600;
-        line-height: 110%;
         letter-spacing: -0.427px;
     }
 }
@@ -16,7 +15,7 @@ p {
     color: var(--gray-600);
     font-size: 1.4rem;
     font-weight: 450;
-    line-height: 120%;
+    margin-bottom: 24px;
 }
 
 form {
@@ -33,7 +32,6 @@ form {
         span {
             font-size: 1.2rem;
             font-weight: 600;
-            line-height: 120%;
             letter-spacing: -0.12px;
         }
 
@@ -58,7 +56,7 @@ form {
 
         ::deep textarea {
             padding: 16px;
-            height: 166px;
+            height: 149px;
             resize: none;
         }
 
@@ -70,7 +68,6 @@ form {
     h3 {
         font-size: 1.6rem;
         font-weight: 600;
-        line-height: 120%;
         letter-spacing: -0.16px;
         margin-bottom: 8px;
     }
@@ -78,18 +75,16 @@ form {
     h4 {
         font-size: 1.4rem;
         font-weight: 600;
-        line-height: 120%;
         letter-spacing: -0.14px;
     }
 
     h5 {
         font-size: 1.2rem;
         font-weight: 600;
-        line-height: 120%;
         letter-spacing: -0.12px;
         margin-bottom: 8px;
     }
-    
+
     section:first-of-type {
         div {
             display: flex;
@@ -138,6 +133,7 @@ form {
 
     section:last-of-type {
         margin-top: 20px;
+        overflow-y: auto;
 
         ul {
             list-style: none;
