--- a/Sparc2/Sparc2/Donations/AddDonation.razor
+++ b/Sparc2/Sparc2/Donations/AddDonation.razor
@@ -2,14 +2,19 @@
 {
     <div>
         <h2>Be Part of Sparc</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+        <p>Aptent facilisi torquent tempor sapien iaculis ultrices nisi porta  lacus. Libero purus sapien nulla commodo fringilla, sed efficitur. At  rutrum facilisis elementum per neque magna quis tincidunt. Faucibus  dignissim scelerisque penatibus lacinia, lacus luctus.</p>
     </div>
     <EditForm Model="@Donation" OnValidSubmit="HandleValidSubmit">
         <div class="field-group">
             <label>Donation frequency</label>
             <div class="btn-group">
-                <button type="button" class="@GetButtonClass(Donation.Frequency == "One time")" @onclick="@(() => SetFrequency("One time"))">One time</button>
-                <button type="button" class="@GetButtonClass(Donation.Frequency == "Monthly")" @onclick="@(() => SetFrequency("Monthly"))">Monthly</button>
+                <button type="button" class="@GetButtonClass(Donation.Frequency == "One time")" @onclick="@(() => SetFrequency("One time"))">
+                    <CoinIcon /> <span>One time</span>
+                </button>
+
+                <button type="button" class="@GetButtonClass(Donation.Frequency == "Monthly")" @onclick="@(() => SetFrequency("Monthly"))">
+                    <RefreshIcon /> <span>Monthly</span>
+                </button>
             </div>
         </div>
 
@@ -20,7 +25,10 @@
                 {
                     <button type="button" class="@GetButtonClass(SelectedAmount == amount)" @onclick="() => SetAmount(amount)">$@amount</button>
                 }
-                <input type="number" placeholder="0" @bind="@CustomAmount">
+                <div class="currency-input">
+                    <CurrencyIcon />
+                    <InputNumber @bind-Value="CustomAmount" placeholder="0" @onfocus="() => SetAmount(null)" @oninput="() => SetAmount(null)" />
+                </div>
             </div>
         </div>
     </EditForm>
@@ -28,38 +36,40 @@
 else if (CurrentStep == 1)
 {
     <h2>Payment Method</h2>
-    <EditForm Model="@Donation" OnValidSubmit="HandleValidSubmit" class="payment-form">
-        <label>
-            <span>Name <span class="required">*</span></span>
-            <InputText placeholder="Name on the card" @bind-Value="Donation.Payment.DonorNameOnTheCard" />
-        </label>
-        <label>
-            <span>Card Number <span class="required">*</span></span>
-            <InputText placeholder="Card number" @bind-Value="Donation.Payment.CardNumber" />
-        </label>
-        <div>
+    <div class="payment-form">
+        <EditForm Model="@Donation" OnValidSubmit="HandleValidSubmit">
             <label>
-                <span>Expiry Date <span class="required">*</span></span>
-                <InputDate placeholder="MM/YY" @bind-Value="Donation.Payment.ExpiryDate" />
+                <span>Name <span class="required">*</span></span>
+                <InputText placeholder="Name on the card" @bind-Value="Donation.Payment.CardHolderName" />
             </label>
             <label>
-                <span>CVV <span class="required">*</span></span>
-                <InputText placeholder="***" @bind-Value="Donation.Payment.CVV" />
+                <span>Card Number <span class="required">*</span></span>
+                <InputText placeholder="Card number" @bind-Value="Donation.Payment.CardNumber" />
             </label>
-        </div>
-        <label>
-            <span>Email Address <span class="required">*</span></span>
-            <InputText placeholder="Email" @bind-Value="Donation.Payment.EmailAdress" />
-        </label>
-        <label>
-            <span>Billing Address Line 1 <span class="required">*</span></span>
-            <InputText placeholder="Billing Address" @bind-Value="Donation.Payment.BillingAddress" />
-        </label>
-        <label>
-            <span>Billing Address Line 2 <span class="required">*</span></span>
-            <InputText placeholder="Billing Address" @bind-Value="Donation.Payment.BillingAddress" />
-        </label>
-    </EditForm>
+            <div>
+                <label>
+                    <span>Expiry Date <span class="required">*</span></span>
+                    <InputText placeholder="MM/YY" @bind-Value:format="MM/yy" @bind-Value="Donation.Payment.ExpiryDate" />
+                </label>
+                <label>
+                    <span>CVV <span class="required">*</span></span>
+                    <InputText placeholder="***" @bind-Value="Donation.Payment.CVV" />
+                </label>
+            </div>
+            <label>
+                <span>Email Address <span class="required">*</span></span>
+                <InputText placeholder="Email" @bind-Value="Donation.Payment.EmailAdress" />
+            </label>
+            <label>
+                <span>Billing Address Line 1 <span class="required">*</span></span>
+                <InputText placeholder="Billing Address" @bind-Value="Donation.Payment.BillingAddress" />
+            </label>
+            <label>
+                <span>Billing Address Line 2 <span class="required">*</span></span>
+                <InputText placeholder="Billing Address" @bind-Value="Donation.Payment.BillingAddress" />
+            </label>
+        </EditForm>
+    </div>
 }
 
 @code {
@@ -69,7 +79,7 @@ else if (CurrentStep == 1)
 
     private readonly int[] PredefinedAmounts = { 5, 25, 50, 60, 75, 100 };
 
-    private UserDonation Donation = new UserDonation(0, string.Empty, new PaymentInfo(string.Empty, string.Empty, DateTime.Now, string.Empty, string.Empty, string.Empty, string.Empty));
+    private UserDonation Donation = new UserDonation(0, string.Empty, new PaymentInfo(string.Empty, string.Empty, string.Empty, string.Empty, string.Empty, string.Empty, string.Empty));
 
     private decimal? SelectedAmount { get; set; } = null;
     private decimal? CustomAmount
@@ -77,8 +87,12 @@ else if (CurrentStep == 1)
         get => SelectedAmount == null ? Donation.Amount : null;
         set
         {
-            SelectedAmount = null;
+            if (value != null)
+            {
+                SetAmount(null);
+            }
             Donation.Amount = value ?? 0;
+            StateHasChanged();
         }
     }
 
@@ -87,15 +101,16 @@ else if (CurrentStep == 1)
         Donation.Frequency = frequency;
     }
 
-    private void SetAmount(decimal amount)
+    private void SetAmount(decimal? amount)
     {
         SelectedAmount = amount;
-        Donation.Amount = amount;
+        Donation.Amount = amount ?? 0;
+        StateHasChanged();
     }
 
     private string GetButtonClass(bool isSelected)
     {
-        return isSelected ? "btn selected" : "btn";
+        return isSelected ? "selected" : "";
     }
 
     private async Task HandleValidSubmit()
