--- a/Sparc2/Sparc2/Shared/Components/AddCard.razor.scss
+++ b/Sparc2/Sparc2/Shared/Components/AddCard.razor.scss
@@ -1,5 +1,8 @@
 ﻿.add-card {
+    display: flex;
+    flex-direction: column;
     width: 332px;
+    height: 605px;
     padding: 24px;
     border-radius: 16px;
     background: var(--yellow-50);
@@ -8,9 +11,10 @@
     .progress-bar {
         height: 2px;
         background: var(--purple-100);
+        margin: 24px 0;
 
         .progress {
-            height: 100%;
+            height: 2px;
             background: var(--purple-800);
         }
     }
@@ -18,11 +22,10 @@
     header {
         display: flex;
         gap: 5px;
-        margin-bottom: 24px;
 
         button {
             height: 32px;
-            padding: 3px 12px;
+            padding: 3px 12px 3px 10px;
             display: flex;
             gap: 4px;
             align-items: center;
@@ -32,25 +35,51 @@
             font-weight: 600;
             background: transparent;
             cursor: pointer;
+            opacity: 0.6;
 
             &.active {
                 box-shadow: 0 0 8px rgba(178, 116, 250, 0.25);
                 color: var(--purple-800);
+                opacity: unset;
+            }
+        }
+
+        button:first-of-type {
+            ::deep svg path {
+                stroke: var(--gray-600);
+            }
+
+            &.active {
+                ::deep svg path {
+                    stroke: var(--purple-800);
+                }
+            }
+        }
+
+        button:last-of-type {
+            ::deep svg path {
+                fill: var(--gray-600);
+            }
+
+            &.active {
+                ::deep svg path {
+                    fill: var(--purple-800);
+                }
             }
         }
     }
 
     section {
         display: flex;
-        flex-direction: column;
-        gap: 24px;
-        margin-top: 24px;
+        flex-direction: column;        
+        flex: 1;
+        max-height: 448px;
     }
 
     footer {
         display: flex;
         justify-content: space-between;
-        margin-top: 24px;
+        margin-top: 34px;
 
         button {
             height: 40px;
