--- a/Sparc2/Sparc2/Index.razor
+++ b/Sparc2/Sparc2/Index.razor
@@ -2,11 +2,13 @@
 
 <PageTitle>Sparc</PageTitle>
 
-<section class="home">
-    <div>
-        <h1>Striving for a world where startups are owned by those who built it <button><ArrowRightIcon /></button></h1>        
-    </div>
-    <div class="mosaic-container">
-        <img src="images/LogoMosaic.png" class="mosaic" />
+<section id="home">
+    <div class="hero">
+        <div id="hero-text">
+            <h1>Striving for a world where startups are owned by those who built it <button><ArrowRightIcon /></button></h1>        
+        </div>
+        <div id="mosaic-container">
+            <img src="images/LogoMosaic.png" id="mosaic" />
+        </div>
     </div>
 </section>
