Integration with Blossom.Payment.Sparc, and added sample page "TestPayment"

--- a/Sparc2/Sparc2/Html.razor
+++ b/Sparc2/Sparc2/Html.razor
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="@Assets["css/app.css"]" />
     <link rel="stylesheet" href="@Assets["Sparc2.styles.css"]" />
     <link rel="icon" href="images/Logo.svg" sizes="any" type="image/svg+xml" />
+    <script src="https://js.stripe.com/v3"></script>
+    <script src="@Assets["js/stripeIntegration.js"]"></script>
     <ImportMap />
     
     <HeadOutlet @rendermode="InteractiveServer" />
