--- a/Sparc2/Sparc2/Index.razor
+++ b/Sparc2/Sparc2/Index.razor
@@ -8,7 +8,30 @@
             <h1>Striving for a world where startups are owned by those who built it <button><ArrowRightIcon /></button></h1>        
         </div>
         <div id="mosaic-container">
-            <img src="images/LogoMosaic.png" id="mosaic" />
+            <img src="images/LogoMosaic-withbackground.png" id="mosaic" />
         </div>
     </div>
+    <div id="scroll-text">
+        <p>scroll down, click, or press enter to explore ideas</p>
+        <ArrowLeftIcon />
+    </div>
 </section>
+
+@* <script>
+    function scroll() {
+        window.scroll({
+            bottom: 0,
+        });
+
+        console.log("click to scroll");
+    }
+</script>
+
+@inject IJSRuntime Js
+
+@code {
+    private async void Scroll()
+    {
+        await Js.InvokeVoidAsync("scroll");
+    }
+} *@
