--- a/Sparc2/Sparc2/Index.razor.css
+++ b/Sparc2/Sparc2/Index.razor.css
@@ -1,15 +1,15 @@
 ﻿section {
-  height: 150vh;
+  height: calc(100vh + 1px);
   overflow: hidden;
+  position: relative;
 }
 section .hero {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   margin: 9rem 6.3rem 0 6.3rem;
 }
 section .hero div {
-  width: 46%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -19,6 +19,7 @@ section .hero #hero-text {
   animation: fadeIn 3s ease-in-out;
 }
 section .hero #hero-text h1 {
+  max-width: 750px;
   font-size: 89px;
   margin: 0;
 }
@@ -27,11 +28,47 @@ section .hero #hero-text h1 button {
   cursor: pointer;
   border: 1px solid transparent;
 }
+section .hero #hero-text.faded {
+  background: -webkit-linear-gradient(#FF5A08, #3F256B);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  opacity: 0.75;
+}
 section .hero #mosaic-container {
+  width: 50%;
   animation: fadeInScaleUp 2s ease-in-out;
 }
 section .hero #mosaic-container img {
   width: 100%;
+}
+section #scroll-text {
+  margin: 0 auto;
+  width: fit-content;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  position: absolute;
+  left: 50%;
+  bottom: 40px;
+  transform: translateX(-50%);
+  animation: fadeIn 6s ease-in-out;
+  cursor: pointer;
+}
+section #scroll-text p {
+  font-size: 1.2rem;
+  color: var(--purple-800);
+  letter-spacing: 0.4px;
+}
+section #scroll-text ::deep svg {
+  width: 14px;
+  height: 14px;
+  transform: rotate(-90deg);
+  animation: bounce 2s infinite;
+}
+section #scroll-text ::deep svg path {
+  stroke: var(--purple-800);
 }
 
 ::-webkit-scrollbar {
@@ -54,5 +91,16 @@ section .hero #mosaic-container img {
   100% {
     opacity: 1;
     transform: scale(1);
+  }
+}
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    transform: translateY(0) rotate(-90deg);
+  }
+  40% {
+    transform: translateY(8px) rotate(-90deg);
+  }
+  60% {
+    transform: translateY(4px) rotate(-90deg);
   }
 }
