--- a/Sparc2/Sparc2/Ideas/IdeaCard.razor
+++ b/Sparc2/Sparc2/Ideas/IdeaCard.razor
@@ -10,26 +10,26 @@
         <h2>@Idea.Title</h2>
         <div class="files">
             <div class="images">
-                @if (Idea.Files.Count < 1)
+                @if (Idea.FileUrls.Count < 1)
                 {
                     <img src="images/Rectangle 13.png" />
                 }
                 else
                 {
-                    @foreach (var file in Idea.Files)
+                    @foreach (var fileUrl in Idea.FileUrls)
                     {
-                        <img src="@file.FilePath" class="@(currentFile == file ? "active" : "")" />
+                        <img src="@fileUrl" class="@(currentFile == fileUrl ? "active" : "")" />
                     }
                 }
             </div>
-            @if(Idea.Files.Count > 1)
+            @if(Idea.FileUrls.Count > 1)
             {
                 <div class="arrows">
                     <button class="arrow-left" @onclick=previousFile><ArrowLeftIcon /></button>
                     <button class="arrow-right" @onclick=nextFile><ArrowLeftIcon /></button>
                 </div>
                 <div class="indicators">
-                    @foreach (var file in Idea.Files)
+                    @foreach (var file in Idea.FileUrls)
                     {
                         <div class="indicator @(currentFile == file ? "active" : "")"></div>
                     }
@@ -45,7 +45,7 @@
             <button><ChatBubbleIcon /> <span>@comments.Count</span></button>
             <button><ThumbsUpIcon /> <span>@likes.Count</span></button>
         </div>
-        <button><FileIcon /> <span>@Idea.Files.Count</span></button>
+        <button><FileIcon /> <span>@(Idea.FileUrls?.Count ?? 0)</span></button>
     </footer>
 </div>
 
@@ -55,33 +55,28 @@
     List<string> comments = new List<string>();
     List<string> likes = new List<string>();
 
-    Sparc2.Files.FileUpload currentFile;
+    string currentFile;
 
     protected override void OnInitialized()
-    { 
-        currentFile = Idea.Files.First(x => x != null);
+    {
+        currentFile = Idea.FileUrls?.FirstOrDefault() ?? "";
     }
 
     void nextFile()
     {
-        if (Idea.Files.IndexOf(currentFile) == Idea.Files.Count - 1)
+        var index = Idea.FileUrls.IndexOf(currentFile);
+        if (index < Idea.FileUrls.Count - 1)
         {
-            return;
-        } else
-        {
-            currentFile = Idea.Files[Idea.Files.IndexOf(currentFile) + 1];
+            currentFile = Idea.FileUrls[index + 1];
         }
     }
 
     void previousFile()
     {
-        if (Idea.Files.IndexOf(currentFile) == 0)
+        var index = Idea.FileUrls.IndexOf(currentFile);
+        if (index > 0)
         {
-            return;
-        } else
-        {
-            currentFile = Idea.Files[Idea.Files.IndexOf(currentFile) - 1];
-
+            currentFile = Idea.FileUrls[index - 1];
         }
     }
 }
