update fonts, add global button state classes -- see Html.razor.scss, fix button icon alignment in nav

--- a/Sparc2/Sparc2/Html.razor
+++ b/Sparc2/Sparc2/Html.razor
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="@Assets["css/app.css"]" />
     <link rel="stylesheet" href="@Assets["Sparc2.styles.css"]" />
     <link rel="icon" href="images/Logo.svg" sizes="any" type="image/svg+xml" />
+    <link rel="stylesheet" href="https://use.typekit.net/mur1cay.css">
     <ImportMap />
     
     <HeadOutlet @rendermode="InteractiveServer" />
