--- a/Sparc2/Sparc2/Index.razor.css
+++ b/Sparc2/Sparc2/Index.razor.css
@@ -20,8 +20,10 @@ section .hero #hero-text {
 }
 section .hero #hero-text h1 {
   max-width: 750px;
-  font-size: 89px;
   margin: 0;
+  color: var(--purple-800);
+  font-size: 89px;
+  letter-spacing: -1.795px;
 }
 section .hero #hero-text h1 button {
   background: none;
