--- a/Sparc2/Sparc2/Index.razor.scss
+++ b/Sparc2/Sparc2/Index.razor.scss
@@ -21,9 +21,10 @@
 
             h1 {
                 max-width: 750px;
-                font-size: 89px;
                 margin: 0;
-
+                color: var(--purple-800);
+                font-size: 89px;
+                letter-spacing: -1.795px;
 
                 button {
                     background: none;
