--- a/Sparc2/Sparc2/Ideas/IdeaCard.razor
+++ b/Sparc2/Sparc2/Ideas/IdeaCard.razor
@@ -42,10 +42,10 @@
     </section>
     <footer>
         <div>
-            <button><ChatBubbleIcon /> <span>@comments.Count</span></button>
-            <button><ThumbsUpIcon /> <span>@likes.Count</span></button>
+            <button class="tertiary-btn"><ChatBubbleIcon /> <span>@comments.Count</span></button>
+            <button class="tertiary-btn"><ThumbsUpIcon /> <span>@likes.Count</span></button>
         </div>
-        <button><FileIcon /> <span>@Idea.Files.Count</span></button>
+        <button class="tertiary-btn"><FileIcon /> <span>@Idea.Files.Count</span></button>
     </footer>
 </div>
 
