--- a/Sparc2/Sparc2/Ideas/IdeaCard.razor.scss
+++ b/Sparc2/Sparc2/Ideas/IdeaCard.razor.scss
@@ -171,7 +171,7 @@
             flex-direction: row;
             gap: 4px;
         }
-
+/*
         button {
             display: flex;
             height: 40px;
@@ -198,7 +198,7 @@
             &:active {
                 border: 1px solid var(--gray-100);
             }
-        }
+        }*/
     }
 }
 
