--- a/Sparc2/Sparc2/Shared/NavMenu.razor.css
+++ b/Sparc2/Sparc2/Shared/NavMenu.razor.css
@@ -42,7 +42,9 @@ nav button {
   border-radius: 20px;
   color: var(--purple-800);
   font-size: 14px;
-  font-weight: 500;
+  font-weight: 600;
+  line-height: 120%;
+  letter-spacing: -0.14px;
   cursor: pointer;
   transition: 0.2s all ease-in-out;
 }
@@ -62,6 +64,9 @@ nav button {
   flex-direction: row;
   justify-content: center;
   gap: 4px;
+}
+.other-nav button ::deep svg {
+  margin-top: 1px;
 }
 .other-nav button:hover {
   border: 1px solid var(--yellow-50);
