--- a/Sparc2/Sparc2/Shared/NavMenu.razor.scss
+++ b/Sparc2/Sparc2/Shared/NavMenu.razor.scss
@@ -47,7 +47,9 @@
         border-radius: 20px;
         color: var(--purple-800);
         font-size: 14px;
-        font-weight: 500;
+        font-weight: 600;
+        line-height: 120%;
+        letter-spacing: -0.14px;
         cursor: pointer;
         transition: .2s all ease-in-out;
     }
@@ -68,6 +70,10 @@
         flex-direction: row;
         justify-content: center;
         gap: 4px;
+
+        ::deep svg {
+            margin-top: 1px;
+        }
 
         &:hover {
             border: 1px solid var(--yellow-50);
