update ideas page nav

--- a/Sparc2/Sparc2/Shared/NavMenu.razor
+++ b/Sparc2/Sparc2/Shared/NavMenu.razor
@@ -13,10 +13,10 @@
         else
         {
             <div class="left">
-                <button @onclick='() => Navigate("/")'>Exit</button>
+                <button @onclick='() => Navigate("/")'><ArrowLeftIcon /> <span>Exit</span></button>
             </div>
             <div class="center">
-                <input type="text" placeholder="Search..." class="input-text" />
+                <input type="text" placeholder="Search" class="input-text" />
             </div>
             <div class="right">
                 <button><ExploreIcon /> <span>Explore</span></button>
