--- a/Sparc2/Sparc2/Shared/NavMenu.razor.css
+++ b/Sparc2/Sparc2/Shared/NavMenu.razor.css
@@ -12,25 +12,6 @@ nav .container {
   justify-content: space-between;
   align-items: center;
 }
-nav .center {
-  display: flex;
-  justify-content: center;
-  flex-grow: 1;
-}
-nav .center input {
-  width: 80%;
-  margin-left: 10px;
-  padding: 10px;
-  background: transparent;
-  border-radius: 4px;
-  border: 1px solid transparent;
-  color: var(--yellow-50);
-  font-size: 14px;
-}
-nav .center input::placeholder {
-  color: var(--yellow-50);
-  opacity: 0.6;
-}
 nav .right {
   display: flex;
   gap: 8px;
@@ -58,12 +39,45 @@ nav button {
   backdrop-filter: blur(100px);
   -webkit-backdrop-filter: blur(100px);
 }
+.other-nav .left button > svg {
+  width: 14px;
+  height: 14px;
+}
+.other-nav .left button > svg path {
+  stroke: var(--white);
+}
+.other-nav .center {
+  display: flex;
+  justify-content: center;
+  flex-grow: 1;
+}
+.other-nav .center input {
+  width: 95%;
+  height: 16px;
+  padding: 8px 16px;
+  background: transparent;
+  border-radius: 16px;
+  border: 1px solid var(--gray-200);
+  color: var(--gray-200);
+  font-size: 1.6rem;
+  font-weight: 400;
+  line-height: 120%;
+  letter-spacing: -0.16px;
+}
+.other-nav .center input:focus {
+  background: rgba(0, 0, 0, 0.2);
+}
+.other-nav .center input::placeholder {
+  color: var(--gray-200);
+  opacity: 0.6;
+}
 .other-nav button {
-  color: var(--yellow-50);
+  height: 34px;
   display: flex;
   flex-direction: row;
   justify-content: center;
   gap: 4px;
+  color: var(--yellow-50);
 }
 .other-nav button ::deep svg {
   margin-top: 1px;
