--- a/Sparc2/Sparc2/Shared/NavMenu.razor.scss
+++ b/Sparc2/Sparc2/Shared/NavMenu.razor.scss
@@ -13,28 +13,6 @@
         align-items: center;
     }
 
-    .center {
-        display: flex;
-        justify-content: center;
-        flex-grow: 1;
-
-        input {
-            width: 80%;
-            margin-left: 10px;
-            padding: 10px;
-            background: transparent;
-            border-radius: 4px;
-            border: 1px solid transparent;
-            color: var(--yellow-50);
-            font-size: 14px;
-
-            &::placeholder {
-                color: var(--yellow-50);
-                opacity: .6;
-            }
-        }
-    }
-
     .right {
         display: flex;
         gap: 8px;
@@ -64,12 +42,55 @@
     backdrop-filter: blur(100px);
     -webkit-backdrop-filter: blur(100px);
 
+    .left {
+        button {
+            > svg {
+                width: 14px;
+                height: 14px;
+
+                path {
+                    stroke: var(--white);
+                }
+            }
+        }
+    }
+
+    .center {
+        display: flex;
+        justify-content: center;
+        flex-grow: 1;
+
+        input {
+            width: 95%;
+            height: 16px;
+            padding: 8px 16px;
+            background: transparent;
+            border-radius: 16px;
+            border: 1px solid var(--gray-200);
+            color: var(--gray-200);
+            font-size: 1.6rem;
+            font-weight: 400;
+            line-height: 120%;
+            letter-spacing: -0.16px;
+
+            &:focus {
+                background: rgba(0, 0, 0, 0.20);
+            }
+
+            &::placeholder {
+                color: var(--gray-200);
+                opacity: .6;
+            }
+        }
+    }
+
     button {
-        color: var(--yellow-50);
+        height: 34px;
         display: flex;
         flex-direction: row;
         justify-content: center;
         gap: 4px;
+        color: var(--yellow-50);
 
         ::deep svg {
             margin-top: 1px;
